model trained and evaluated

--- a/pd_modeling/Dealing with credit data.ipynb
+++ b/pd_modeling/Dealing with credit data.ipynb
@@ -2514,7 +2514,7 @@
      "output_type": "stream",
      "text": [
       "CR11 - GLM.pdf                         Untitled.ipynb\r\n",
-      "CR12- Classification Model Metrics.pdf \u001b[1m\u001b[36m__pycache__\u001b[m\u001b[m\r\n",
+      "CR12- Classification Model Metrics.pdf \u001B[1m\u001B[36m__pycache__\u001B[m\u001B[m\r\n",
       "CR13 - PD Modeling.pdf                 bins.json\r\n",
       "DEMO GLM.ipynb                         bins.py\r\n",
       "Dealing with credit data.ipynb         credit-dataset.csv\r\n",
