added multiple models and half of pipeline

--- a/pd_modeling/report.ipynb
+++ b/pd_modeling/report.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
      "start_time": "2023-04-23T21:41:18.598913Z",
      "end_time": "2023-04-23T21:41:20.908631Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -21,10 +24,14 @@
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.exceptions import NotFittedError\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_curve, auc, f1_score\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.preprocessing import OrdinalEncoder, StandardScaler\n",
+    "from mlxtend.classifier import StackingClassifier\n",
     "from typing import Dict\n",
     "from transformers.columnSelectorTransformer import ColumnSelectorTransformer\n",
     "from transformers.woeTransformer import WOETransformer\n",
@@ -863,8 +870,10 @@
     "    ('col selector', ColumnSelectorTransformer(columns=new_cols_to_keep)),\n",
     "    ('bins', BinningTransformer(bins=new_bins)),\n",
     "    ('woe', WOETransformer(columns=new_cols_to_keep)),\n",
-    "    # ('logistic regression', LogisticRegression(random_state=seed))\n",
-    "    ('gdbt', GradientBoostingClassifier(random_state=seed))\n",
+    "    ('logistic regression', LogisticRegression(random_state=seed)),\n",
+    "    ('gdbt', GradientBoostingClassifier(random_state=seed)),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('stack', stack_model)\n",
     "])"
    ],
    "metadata": {
@@ -1311,9 +1320,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 113,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.8757862052493299"
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.get_dummies(x_train_b).head()\n",
+    "model_4 = DecisionTreeClassifier(random_state=seed)\n",
+    "model_4.fit(pd.get_dummies(x_train_b), y_train_nd)\n",
+    "model_4.score(pd.get_dummies(x_train_b), y_train_nd)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.8757862052493299"
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.get_dummies(x_train_b).head()\n",
+    "model_5 = RandomForestClassifier(random_state=seed)\n",
+    "model_5.fit(pd.get_dummies(x_train_b), y_train_nd)\n",
+    "model_5.score(pd.get_dummies(x_train_b), y_train_nd)"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -1322,18 +1368,16 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "svm_model = SVC(probability=True, random_state=seed)\n",
+    "svm_model.fit(pd.get_dummies(x_train_b), y_train_nd)\n",
+    "svm_model.score(pd.get_dummies(x_train_b), y_train_nd)"
+   ],
    "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
