me estoy asegurando q esté todo

--- a/pd_modeling/eda.ipynb
+++ b/pd_modeling/eda.ipynb
@@ -1491,7 +1491,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 5 insights Eda"
+    "## Predictors interpretation"
    ],
    "metadata": {
     "collapsed": false
