--- a/pd_modeling/report.ipynb
+++ b/pd_modeling/report.ipynb
@@ -852,6 +852,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Dataset is split in 80% training and 20% testing, so theres no overfitting"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "outputs": [
@@ -906,6 +915,29 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Stacking"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Stacking' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[51], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mStacking\u001B[49m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Stacking' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 51
   },
   {
    "cell_type": "code",
@@ -1071,6 +1103,15 @@
     "print(\"Accuracy: {:.4f}\".format(accuracy))\n",
     "print(\"Precision: {:.4f}\".format(precision))\n",
     "print(\"Recall: {:.4f}\".format(recall))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "All metrics from the model were decent"
    ],
    "metadata": {
     "collapsed": false
